Completed the Staff table function.

--- a/HotelWebApplication/HotelWebApplication.csproj
+++ b/HotelWebApplication/HotelWebApplication.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
@@ -15,6 +14,7 @@
     <None Remove="X.PagedList" />
     <None Remove="X.PagedList.Mvc.Core" />
     <None Remove="Data\" />
+    <None Remove="Views\Staff\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.1" />
@@ -29,5 +29,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="wwwroot\Images\" />
+    <Folder Include="Views\Staff\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\Images\" />
   </ItemGroup>
 </Project>
