--- a/HotelWebApplication/HotelWebApplication.csproj
+++ b/HotelWebApplication/HotelWebApplication.csproj
@@ -15,6 +15,8 @@
     <None Remove="X.PagedList.Mvc.Core" />
     <None Remove="Data\" />
     <None Remove="Views\Staff\" />
+    <None Remove="Newtonsoft.Json" />
+    <None Remove="Microsoft.Data.SqlClient" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.1" />
@@ -26,6 +28,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.1" />
     <PackageReference Include="X.PagedList" Version="8.1.0" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="8.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
